--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .navbar{
     display: flex;
-    background:#111 ;
+    background:#614BC3 ;
     color: white;
     height: 100px;
     border-bottom-left-radius: 40px;
@@ -82,7 +82,7 @@ span{
 footer{
     
     height: 200px;
-    background: #111;
+    background: #614BC3;
     color: white;
     text-align: center;
     border-top-right-radius: 30px;
@@ -92,7 +92,7 @@ footer{
     bottom: 0;
 }
 .container{
-    background-color: antiquewhite;
+    background-color: #9D76C1;
     width: 700px;
     margin-left: auto;
     margin-right: auto;
