--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ footer{
     bottom: 0;
 }
 .container{
-    background-color: #9D76C1;
+    background-color: #614BC3;
     width: 700px;
     margin-left: auto;
     margin-right: auto;
