--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ footer{
 }
 
 .container > h2{
-   color: green;
+   color: white;
 }
 .container > p {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
