--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .navbar{
     display: flex;
-/*     background:#AAD7D; */
+/*     background:#6DA4AA; */
     background:#6DA4AA;
     color: white;9
     height: 100px;
@@ -83,7 +83,7 @@ span{
 footer{
     
     height: 200px;
-    background: #AAD7D;
+    background: #6DA4AA;
     color: white;
     text-align: center;
     border-top-right-radius: 30px;
@@ -93,7 +93,7 @@ footer{
     bottom: 0;
 }
 .container{
-    background-color: #AAD7D;
+    background-color: #6DA4AA;
     width: 700px;
     margin-left: auto;
     margin-right: auto;
