--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     display: flex;
 /*     background:#6DA4AA; */
     background:#6DA4AA;
-    color: white;9
+    color: black;9
     height: 100px;
     border-bottom-left-radius: 40px;
     
@@ -15,7 +15,7 @@ body{
     background-color: Black;
 }
 .navbar > ul{
-    color: white;
+    color: black;
     margin: 40px;
     padding: 10px;
     display: flex;
@@ -28,7 +28,7 @@ body{
     padding: 10px;
     text-decoration: none;
     font-size: 20px;
-    color: white;
+    color: black;
 
 
 }
@@ -46,13 +46,14 @@ ul{
     margin-right: auto;
 }
 span{
-    color: white;
+    color: black;
     background-color: #111;
     padding: 6px;
     border-radius: 30px;
 }
 .profile-pic > img{
     height: 200px;
+    color: #6DA4AA;
     
 }
 .section > h2{
@@ -71,7 +72,7 @@ span{
 
 }
 .buttons{
-    color: white;
+    color: black;
     /* margin-top: 100px; */
     padding: 20px;
     background-color: #111;
@@ -84,7 +85,7 @@ footer{
     
     height: 200px;
     background: #6DA4AA;
-    color: white;
+    color: black;
     text-align: center;
     border-top-right-radius: 30px;
 }
@@ -102,7 +103,7 @@ footer{
 }
 
 .container > h2{
-   color: white;
+   color: black;
 }
 .container > p {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
