--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 .navbar{
     display: flex;
-/*     background:#6DA4AA; */
-    background:#6DA4AA;
-    color: black;9
+    background:#614BC3 ;
+    color: white;
     height: 100px;
     border-bottom-left-radius: 40px;
     
@@ -12,10 +11,10 @@
 
 }
 body{
-    background-color: Black;
+    /* background-color: rgb(235, 236, 235); */
 }
 .navbar > ul{
-    color: black;
+    color: white;
     margin: 40px;
     padding: 10px;
     display: flex;
@@ -28,7 +27,7 @@ body{
     padding: 10px;
     text-decoration: none;
     font-size: 20px;
-    color: black;
+    color: white;
 
 
 }
@@ -46,14 +45,13 @@ ul{
     margin-right: auto;
 }
 span{
-    color: black;
+    color: white;
     background-color: #111;
     padding: 6px;
     border-radius: 30px;
 }
 .profile-pic > img{
     height: 200px;
-    color: #6DA4AA;
     
 }
 .section > h2{
@@ -72,7 +70,7 @@ span{
 
 }
 .buttons{
-    color: black;
+    color: white;
     /* margin-top: 100px; */
     padding: 20px;
     background-color: #111;
@@ -84,8 +82,8 @@ span{
 footer{
     
     height: 200px;
-    background: #6DA4AA;
-    color: black;
+    background: #614BC3;
+    color: white;
     text-align: center;
     border-top-right-radius: 30px;
 }
@@ -94,7 +92,7 @@ footer{
     bottom: 0;
 }
 .container{
-    background-color: #6DA4AA;
+    background-color: #9D76C1;
     width: 700px;
     margin-left: auto;
     margin-right: auto;
@@ -103,7 +101,7 @@ footer{
 }
 
 .container > h2{
-   color: white;
+   color: green;
 }
 .container > p {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
